# THORR

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  random_forest_ms_example.ipynb  setup.py
Data/InSituTemperature/: insitu_reach_key.csv  insitu_reach_key.dbf  insitu_reach_key.shp  insitu_reach_key.shx  insitu_reach_key.xlsx
Methods/2.Data/: TIR_v_Insitu.ipynb
Methods/3.WaterTempEst/: data_processing.ipynb  rat_dels.csv  rat_sarea.csv  reaches_and_dams.csv
Results/: TIR_v_Insitu.ipynb  general_analyses.R
Results/0.Figures/: Dam_depth.R  ML1_v_ML2.R  dam_reaches.R  insitu_v_landsat.R  model_comparison1.R  model_comparison2.R  plot_test_reaches.R  rfr_elbow.R  test_reaches.R
Results/2.WaterTempEst/: donwstream_reach_assessment1.csv  model_metrics.csv  scalers.pkl  test_data.csv
Results/ML1/: ML1_Blk1_training.R  blk1_crossval.csv
Results/ML2/: cv_ml1_v_ml2.csv
Webapp/hydrothermalviewer/: index.html
Webapp/thorr/: index.html
data/MySQL/: db_setup.ipynb
data/db_backup/: thorr_Basins.sql  thorr_Dams.sql  thorr_Reaches.sql  thorr_Rivers.sql
docs/: requirements.txt
docs/source/: conf.py  database.rst  database_setup.rst  getting_started.rst  gis.rst  index.rst  modules.rst  publications.rst  webapp.rst
methods/01-data_collection/: add_stations_to_gpkg.ipynb
methods/02-database/: setup.ipynb  upload_gis.ipynb  upload_gis_postgresql.ipynb
methods/03-rivers_to_reaches/: rivers_to_reaches.ipynb
methods/04-eda/: insitu-v-landsat.ipynb
methods/04-ml_development/: rat_dels.csv  rat_sarea.csv
methods/05-test_Reaches/: test_reaches.ipynb
methods/06-temperature_est/: GrandCoulee_operation.ipynb  temp_reconstruction_all.ipynb  temp_reconstruction_columbia.ipynb
methods/07-grand_coulee_operation/: elevation copy.ipynb  elevation.ipynb  grand_coulee_reservoir_elev.csv
misc/CRITFC_transfer/: prepare_inputs.ipynb  random_forest.ipynb  viz_tree_single.ipynb
src/thorr/: __about__.py  cli.py  core.py  database.py  utils.py
tests/: context.py  test_thorr.py
utils/ml/: data_processing.py  (+1 more)
(+6582 files in other folders)
